      applications build.
  * Update debian/control:
    - add libblkid-dev and libudev-dev build dependencies.
    - move hal dependency to suggests.
    - add libdeclarative-connectivity, libdeclarative-feedback,
      libdeclarative-organizer and libqtconnectivity1 packages.
  * Update debian/rules:
    - add connectivity to the list of modules.
    - add -languages configure option.
  * Update debian/*.install files.

 -- Fathi Boudra <fabo@debian.org>  Sun, 06 Mar 2011 14:15:40 +0200

qtmobility (1.1.0~beta2-1) experimental; urgency=low

  * New upstream release.
  * Update debian/control:
    - remove libqtwebkit-dev build dependency.
    - add libxrandr-dev build dependency.
    - bump qmf build dependency to 1.0~2010w39.
    - add libqtfeedback1, libqtgallery1, libqtorganizer1,
      libqtversitorganizer1, libdeclarative-gallery, libdeclarative-location,
      libdeclarative-messaging and libdeclarative-systeminfo packages
  * Update debian/rules:
    - update QMF_INCLUDEDIR path.
    - add -demosdir, -examplesdir and -demos configure options.
    - add gallery, organizer and feedback to the modules list.
    - fix pkgconfig and prl files.

 -- Fathi Boudra <fabo@debian.org>  Sat, 09 Oct 2010 15:21:18 +0300

qtmobility (1.0.2-2) experimental; urgency=low

  [ Fathi Boudra ]
  * Split servicefw in his own package.

  [ Pino Toscano ]
  * Update debian/control:
    - limit the libasound2-dev, libbluetooth-dev and network-manager-dev build
      dependencies to linux-any (as they are Linux-specific).

 -- Fathi Boudra <fabo@debian.org>  Tue, 07 Sep 2010 12:37:57 +0300

qtmobility (1.0.2-1) experimental; urgency=low

  * New upstream release.

  [ Fathi Boudra ]
  * Disable Qt Mobility Bearer management module. It is merged in Qt as
    Qt Network Bearer management module after Qt 4.7.0 beta 2 release.
  * Remove patches:
    - 01_fix_ftbfs_incorrect_copy2build_output_value.diff
    - 03_ftbfs_multimedia_plugin.diff
    - 0001_rename_smallsensors.diff